2011-07-21  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* cygwin.din (pthread_condattr_getclock): Export.
	(pthread_condattr_setclock): Export.
	* posix.sgml (std-notimpl): Move pthread_condattr_getclock and
	pthread_condattr_setclock from here...
	(std-susv4): ... to here.
	* sysconf.cc (sca): Set _SC_CLOCK_SELECTION to _POSIX_CLOCK_SELECTION.
	* thread.cc: (pthread_condattr::pthread_condattr): Initialize clock_id.
	(pthread_cond::pthread_cond): Initialize clock_id.
	(pthread_cond_timedwait): Use clock_gettime() instead of gettimeofday()
	in order to support all allowed clocks.
	(pthread_condattr_getclock): New function.
	(pthread_condattr_setclock): New function.
	* thread.h (class pthread_condattr): Add clock_id member.
	(class pthread_cond): Ditto.
	* include/pthread.h: Remove obsolete comment.
	(pthread_condattr_getclock): Declare.
	(pthread_condattr_setclock): Declare.
	* include/cygwin/version.h (CYGWIN_VERSION_API_MINOR): Bump.

2011-07-18  Yaakov Selkowitz  <yselkowitz@users.sourceforge.net>

	* sysconf.cc (sca): Return -1 for _SC_THREAD_ROBUST_PRIO_INHERIT,
	_SC_THREAD_ROBUST_PRIO_PROTECT, and _SC_XOPEN_UUCP.
	(SC_MAX): Redefine accordingly.
	(csa): Return strings for _CS_POSIX_V7_THREADS_CFLAGS,
	_CS_POSIX_V7_THREADS_LDFLAGS, and _CS_V7_ENV.
	(CS_MAX): Redefine accordingly.
	* include/limits.h (LONG_BIT): Define.
	(WORD_BIT): Define.

2011-07-18  Corinna Vinschen  <corinna@vinschen.de>

	* heap.cc (heap_init): Change type of largest_found to PVOID.  Start
	querying memory at 0x20000000.  Use largest_found pointer when trying
	to allocate largest free memory area found.

2011-07-14  Corinna Vinschen  <corinna@vinschen.de>

	* fhandler_console.cc (fhandler_console::input_tcsetattr): Revert to
	setting ENABLE_PROCESSED_INPUT depending on ISIG and IGNBRK.
	(fhandler_console::tcgetattr): Set ISIG depending on
	ENABLE_PROCESSED_INPUT as well.

2011-07-13  Corinna Vinschen  <corinna@vinschen.de>
